--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   },
   "homepage": "https://github.com/imakewebthings/everyo",
   "dependencies": {
+    "agenda": "^0.6.17",
     "lodash": "^2.4.1",
-    "moment": "^2.8.1",
     "nconf": "^0.6.9",
-    "restify": "^2.8.2",
     "yo-api": "^0.2.0"
   }
 }
